[gd_scene load_steps=7 format=3 uid="uid://efmdopk6c8fp"]

[ext_resource type="Texture2D" uid="uid://dqu6ab80q1xxy" path="res://explosion.png" id="1_awion"]
[ext_resource type="Script" uid="uid://2ycglw2we4up" path="res://shot.gd" id="2_3ldfn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ldfn"]
atlas = ExtResource("1_awion")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4qg3"]
atlas = ExtResource("1_awion")
region = Rect2(48, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_w34ps"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ldfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4qg3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5isyo"]

[node name="Bullet" type="AnimatedSprite2D"]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_w34ps")
autoplay = "default"
frame_progress = 0.99414504
script = ExtResource("2_3ldfn")

[node name="Timer" type="Timer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_5isyo")
debug_color = Color(0.92681015, 4.033357e-05, 0.6729296, 0.41960785)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_area_2d_body_entered"]
